# digikam-gmic-qt

./: CMakeLists.txt  README.md  bootstrap-none  bootstrap.linux  bootstrap.macports  bootstrap.vcpkg  update_gmic-qt_directory.txt
gmicqt/: CMakeLists.txt
gmicqt/gmic/: .gitignore
gmicqt/src/: DialogSettings.cpp  GmicQt.cpp  HeadlessProcessor.cpp  MainWindow.cpp  Settings.cpp
gmicqt/translations/: lrelease.sh
src/: MacroUtils.cmake  RulesDigikamHost.cmake
src/bqm/: BqmPluginRules.cmake  gmicbqmplugin.cpp  gmicbqmplugin.h  gmicbqmprocessor.cpp  gmicbqmprocessor.h  gmicbqmtool.cpp  gmicbqmtool.h  gmicfilterchain.cpp  gmicfilterchain.h  gmicfilterchain_item.cpp  gmicfilterchain_p.h  gmicfilterchain_view.cpp  gmicfilterdialog.cpp  gmicfilterdialog.h  gmicfiltermngr.cpp  gmicfiltermngr.h  gmicfiltermngr_delegate.cpp  gmicfiltermngr_p.h  gmicfiltermngr_proxy.cpp  gmicfiltermngr_stack.cpp  gmicfiltermodel.cpp  gmicfiltermodel.h  gmicfilternode.cpp  gmicfilternode.h  gmicfilternode_p.h  gmicfilternode_reader.cpp  gmicfilternode_writer.cpp  gmicfilterwidget.cpp  gmicfilterwidget.h  host_digikam_bqm.cpp
src/common/: gmicqtcommon.cpp  gmicqtcommon.h  gmicqtimageconverter.cpp  gmicqtimageconverter.h  gmicqtwindow.cpp  gmicqtwindow.h
src/editor/: EditorPluginRules.cmake  gmicqttoolplugin.cpp  gmicqttoolplugin.h  host_digikam_editor.cpp
src/patches/: 01_digikam_root_cmakelists.patch  02_digikam_disable_theming.patch  03_digikam_disable_hdpi.patch  04_digikam_disable_logo.patch  05_digikam_plugin_integration.patch  06_digikam_fix_cancel_crash.patch  07_digikam_macos_target.patch  08_digikam_fix_crash_495810.patch
src/reports/: .clazy  .cppcheck  .krazy  .scan-build  clangscan.sh  clazy.sh  clazy_visualizer.py  common.sh  cppcheck.sh  krazy.sh
src/tests/: TestsRules.cmake  host_test.cpp  main_filterselector.cpp  main_processor.cpp
src/translations/: pt.qm
(+2 files in other folders)
